--- a/.github/workflows/react-module6-workflow.yml
+++ b/.github/workflows/react-module6-workflow.yml
@@ -24,14 +24,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - run: npm install
-      - run: npm run build
+      - name: Install
+        working-directory: edu/ibm-fullstack-developer/m6
+        run: npm install
+
+      - name: Build
+        working-directory: edu/ibm-fullstack-developer/m6
+        run: npm run build
 
       - uses: actions/configure-pages@v5
 
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: build
+          path: edu/ibm-fullstack-developer/m6/build
 
       - id: deployment
         uses: actions/deploy-pages@v4
